Added Testing project for testing new class object
testing object rendering from object to flatfile form, vice versa.

--- a/CODE/DataExchange/DataExchangeClass/DataExchangeClass.vbproj
+++ b/CODE/DataExchange/DataExchangeClass/DataExchangeClass.vbproj
@@ -45,13 +45,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Itac.Logger">
-      <HintPath>..\..\..\DLLs\Itac.Logger.dll</HintPath>
+      <HintPath>..\..\DLLs\Itac.Logger.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common">
-      <HintPath>..\..\..\LDE_LDP_LDD\LLMNTCIP\LLMNTCIP\LLMNTCIP\bin\Debug\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+      <HintPath>..\..\DLLs\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data">
-      <HintPath>..\..\..\LDE_LDP_LDD\LLMNTCIP\LLMNTCIP\LLMNTCIP\bin\Debug\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+      <HintPath>..\..\DLLs\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
