--- a/CODE/DataExchange/FileReceiver/app.config
+++ b/CODE/DataExchange/FileReceiver/app.config
@@ -2,7 +2,7 @@
 <configuration>
   <!--FileReceiver-->
   <connectionStrings>
-    <add name="DB" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=mydev;Integrated Security=false;user id=sa;password=123@qwe" providerName="System.Data.SqlClient"/>
+    <add name="DB" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=fdb;Integrated Security=false;user id=sa;password=123@qwe" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <!-- DEVELOPMENT.MODE = ON / OFF -->
