Additional Header - Party

--- a/CODE/DataExchange/FileReceiver/app.config
+++ b/CODE/DataExchange/FileReceiver/app.config
@@ -9,7 +9,8 @@
     <add key="DEVELOPMENT.MODE" value="ON"/>
     <add key="NO.OF.APP" value="1"/>
     <add key="APP.1" value="C:\Users\lenovo\Desktop\workspace\ucustom\test\FoSIM_CA_INBOUND"/>
-    <add key="ARCHIVE.1" value="C:\Users\lenovo\Desktop\workspace\ucustom\test\FoSIM_CA_INBOUND_HISTORY"/>    
+    <add key="ARCHIVE.1" value="C:\Users\lenovo\Desktop\workspace\ucustom\test\FoSIM_CA_INBOUND_HISTORY"/>
+    <add key="RESPONSE.1" value="C:\Users\lenovo\Desktop\workspace\ucustom\test\FoSIM_CA_OUTBOUND"/>
     <add key="APP.2" value="D:\Itacsystem\exe-2\Log"/>
     <add key="TIME.FORMAT.HACK" value="ON"/>
   </appSettings>
