--- a/CODE/DataExchange/FosimDataPosto/App.config
+++ b/CODE/DataExchange/FosimDataPosto/App.config
@@ -4,7 +4,7 @@
   <startup>
     <supportedRuntime version="v2.0.50727"/></startup>
   <connectionStrings>
-    <add name="DB" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=mydev;Integrated Security=false;user id=sa;password=123@qwe" providerName="System.Data.SqlClient"/>
+    <add name="DB" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=fdb;Integrated Security=false;user id=sa;password=123@qwe" providerName="System.Data.SqlClient"/>
     <!--<add name="DB" connectionString="Data Source=zul-pc\mssqlserver2008;Initial Catalog=fosimdb;Integrated Security=false;user id=sa;password=sa" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
