update food code, food code in spec

--- a/CODE/DataExchange/DataWS/DataWS.vbproj
+++ b/CODE/DataExchange/DataWS/DataWS.vbproj
@@ -45,30 +45,30 @@
   <ItemGroup>
     <Reference Include="Itac.Logger, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLLs\Itac.Logger.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Itac.Logger.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=5.0.414.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLLs\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.414.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLLs\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ObjectBuilder">
-      <HintPath>..\..\DLLs\Microsoft.Practices.ObjectBuilder.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.ObjectBuilder.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ObjectBuilder2">
-      <HintPath>..\..\DLLs\Microsoft.Practices.ObjectBuilder2.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.ObjectBuilder2.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
-      <HintPath>..\..\DLLs\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity">
-      <HintPath>..\..\DLLs\Microsoft.Practices.Unity.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.Interception">
-      <HintPath>..\..\DLLs\Microsoft.Practices.Unity.Interception.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.Unity.Interception.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
