--- a/CODE/DataExchange/DataExchangeClass/DataExchangeClass.vbproj
+++ b/CODE/DataExchange/DataExchangeClass/DataExchangeClass.vbproj
@@ -45,13 +45,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Itac.Logger">
-      <HintPath>..\..\DLLs\Itac.Logger.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Itac.Logger.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common">
-      <HintPath>..\..\DLLs\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data">
-      <HintPath>..\..\DLLs\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\workspace\ucustom\DLLs\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
